DBを初期化するコードを実装