@@ -12,6 +12,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
@@ -26,7 +31,6 @@
             <artifactId>icu4j</artifactId>
             <version>77.1</version>
         </dependency>
-
     </dependencies>
     <build>
         <plugins>
@@ -36,6 +40,10 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.sql</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -52,6 +60,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.programming.advanced.wordle.dao.DatabaseTest</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
